# SPCartopy

./: .gitattributes  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yaml  test-package.yaml
ci/: linting_requirements.txt  requirements.txt
spcartopy/: __init__.py  colors.py  feature.py  hatch.py  legends.py
spcartopy/io/: shapereader.py
spcartopy/mpl/: feature_artist.py  geoaxes.py
src/spcartopy/: __init__.py  colors.py  feature.py  hatch.py  legends.py
src/spcartopy/io/: __init__.py  decode.py  shapereader.py  textreader.py
tests/: test_md.py  test_outlook.py
tutorials/: spcartopy.ipynb
